# ccboy

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  build-wasm.sh  run-server.py
.cargo/: config.toml
docs/: COMPATIBILITY.md  TECHNICAL.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
src/: boot_rom.rs  debug.rs  gameboy.rs  joypad.rs  lib.rs  main.rs  save_state.rs  timer.rs
src/apu/: mod.rs
src/cpu/: instructions.rs  mod.rs  opcodes.rs  opcodes_alu.rs  opcodes_cb.rs  opcodes_extended.rs  registers.rs
src/memory/: cartridge.rs  mmu.rs  mod.rs
src/ppu/: mod.rs  sprite_renderer.rs  tile_renderer.rs
tests/: cpu_tests.rs  integration_tests.rs  memory_tests.rs  ppu_tests.rs  save_state_test.rs
web/: audio-processor.js  index.html  main.js  style.css
